--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
                   </div>
                   <p>
                   Inspired by curriculum design, human learn general knowledge first and then delve into professional expertise. We
-                  first recognize semantic scene and then measure geometric structure. Our approach, termed CurriculumLoc, involves
-                  a delicate design of multistage refinement pipeline and a novel keypoint detection and description with global
-                  semantic awareness and local geometric verification, and results in a practical visual geolocalization solution.
+                  first recognize semantic scene and then measure geometric structure. Our approach involves a delicate design of 
+                  multistage refinement pipeline and a novel keypoint detection and description with global semantic awareness and 
+                  local geometric verification, results in a practical visual geolocalization solution.
                   </p>
               </td>
           </tr> <!--boni2024tgrs-->
@@ -173,8 +173,8 @@
                     <a href="https://ieeexplore.ieee.org/document/10177735">IEEE paper</a>
                   </div>
                   <p>
-                  A graph neural network (GNN) is designed as the feature extraction network, and then a training framework based 
-                  on image classification with a special data grouping strategy is constructed. Results demonstrate the 
+                  We designed a graph neural network (GNN) as the feature extraction network, and constructed a training framework 
+                  based on image classification with a special data grouping strategy. Results demonstrate the 
                   effectiveness of our approach for UAV visual geolocation, especially for large scale applications.
                   </p>
               </td>
@@ -215,12 +215,9 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/10379022">IEEE paper</a>
                   </div>
                   <p>
-                  we investigate Change Detection problems and analyze the challenge of knowledge confusion caused by the label
-                  conflict during Incremental Learning in Change Detection. Our proposed module, CD-DRU, decomposes the feature
-                  space into domain-specific and domain-shared parameters. It utilizes a hierarchy distillation to extract shared
-                  information and employs a differential optimization strategy for Incremental Learning. This effectively mitigates 
-                  catastrophic forgetting and outperforming existing Incremental Learning methods and state-of-the-art Change 
-                  Detection techniques in remote sensing.
+                  We proposed a domain residual module, CD-DRU, decomposes the feature space into domain-specific and domain-shared 
+                  parameters. This effectively mitigates catastrophic forgetting and outperforming existing Incremental Learning 
+                  methods and state-of-the-art Change Detection techniques in remote sensing.
                   </p>
               </td>
           </tr> <!--lean2024tgrs-->
@@ -259,10 +256,10 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/9561772">IEEE Paper</a>
                   </div>
                   <p>
-                  A preoperative colon model segmented from CT scans is used together with the colonoscopic images to achieve the
-                  3D colon reconstruction. The proposed framework includes dense depth estimation from monocular colonoscopic 
-                  images using a deep neural network, visual odometry based camera motion estimation and an embedded 
-                  deformation graph based non-rigid registration algorithm for deforming 3D scans to the segmented colon model.
+                  We utilizes a preoperative colon model segmented from CT scans together with the colonoscopic images to achieve 
+                  the 3D colon reconstruction, including dense depth estimation from monocular colonoscopic images using a deep 
+                  neural network, visual odometry based camera motion estimation and an embedded deformation graph based non-rigid 
+                  registration algorithm for deforming 3D scans to the segmented colon model.
                   </p>
               </td>
           </tr> <!--shuai2021icra-->
@@ -292,10 +289,7 @@
                   </div>
                   <p>
                   We provides a framework that reconstructs the live 3D aortic shape by fusing a 3D static pre-operative model and 
-                  the 2D intra-operative fluoroscopic images. A deep learning approach is adopted as the front-end for extracting 
-                  features from fluoroscopic images. A signed distance field based correspondence method is employed for avoiding 
-                  the repeated feature-vertex matching while maintaining the correspondence accuracy. The warp field of 3D 
-                  deformation is estimated by solving a nonlinear least squares problem based on the embedded deformation graph.
+                  the 2D intra-operative fluoroscopic images. 
                   </p>
               </td>
           </tr> <!--yaohao2020miccai-->
@@ -333,7 +327,7 @@
       </td>
     </tr>
     <tr style="padding:400px">
-      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=Ztxqa4z9YGPVOv8IiDqc4y29_jkDH3CSowbJFtvkTtA"></script>
+      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=fe_Fj5prprHUlB-eS2c4ljhQBUm091xDDPTJpOVMwvA"></script>
     </tr>
 
   </table>
