--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
       </td>
     </tr>
     <tr style="padding:400px">
-      <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=fe_Fj5prprHUlB-eS2c4ljhQBUm091xDDPTJpOVMwvA"></script>
+      <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=fe_Fj5prprHUlB-eS2c4ljhQBUm091xDDPTJpOVMwvA&co=87bbe0'></script>
     </tr>
 
   </table>
