--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
                 <name>Boni Hu</name>
               </p>
               <p>I am now a 4th-year PhD (Sep. 2021 - ) student at <a href="https://en.nwpu.edu.cn/">Northwestern Ploytechnical
-              University</a>. I belong to <a "href=https://gitee.com/pi-lab/pilab_research_fields">Pilot Intelligent Laboratory, 
-              PI-LAB</a>, advised by Prof. <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>. reviously, I received my 
-              M.Eng (Sep. 2018 - Mar. 2021) in Vehicle Operation Engineering from <a href="https://en.nwpu.edu.cn/">Northwestern 
-              Ploytechnical University</a> and B.Eng (Sep. 2014 - Jun. 2018) in Electronic and Information Engineering from <a 
-              href="https://en.nwsuaf.edu.cn/">Northwestern A&F University</a>.
+              University</a>, affiliated with<a "href=https://gitee.com/pi-lab/pilab_research_fields"> the Pilot Intelligent 
+              Laboratory(PI-LAB)</a> and advised by Prof. <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>. Previously, 
+              I obtained my M.Eng (Sep. 2018 - Mar. 2021) in Vehicle Operation Engineering from 
+              <a href="https://en.nwpu.edu.cn/">Northwestern Ploytechnical University</a> and B.Eng (Sep. 2014 - Jun. 2018) in 
+              Electronic and Information Engineering from <a href="https://en.nwsuaf.edu.cn/">Northwestern A&F University</a>.
               </p>
               <p>My current research mainly focuses on vision representation for remote sensing in place recognition and
               geolocalization, as well as its applications in UAV platforms. I am deeply interested in exploring elegant vision 
-              representations of the world, particularly in applications involving unmanned and medical devices. <b><font color="red">I am currently seeking relevant postdoctoral positions </font></b>.
+              representations of the world, particularly in applications related to unmanned and medical devices. <b><font color="red">I am currently seeking relevant postdoctoral positions </font></b>.
               </p>
               <p style="text-align:center">
                 <a href="mailto:huboni@mail.nwpu.edu.cn">Email</a> &nbsp/&nbsp
@@ -111,7 +111,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
+          <b>
             <subheading>Place Recognition/Geolocalization for UAV Platforms</subheading>
+          </b>
           </td>
           </tr>
         </tbody></table>
@@ -141,10 +143,10 @@
                     <a href="https://github.com/boni-hu/CurriculumLoc">code</a>
                   </div>
                   <p>
-                  Inspired by curriculum design, human learn general knowledge first and then delve into professional expertise. We
-                  first recognize semantic scene and then measure geometric structure. Our approach involves a delicate design of 
-                  multistage refinement pipeline and a novel keypoint detection and description with global semantic awareness and 
-                  local geometric verification, results in a practical visual geolocalization solution.
+                  Inspired by curriculum design, human learn general knowledge first and then delve into professional expertise. We 
+                  first recognized semantic scene and then measured geometric structure, involving a delicate design of multistage 
+                  refinement pipeline and a novel keypoint detection and description with global semantic awareness and local 
+                  geometric verification, resulting in a practical visual geolocalization solution.
                   </p>
               </td>
           </tr> <!--boni2024tgrs-->
@@ -183,7 +185,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
+          <b>
             <subheading>Change Detection for UAV Platforms</subheading>
+          </b>
           </td>
           </tr>
         </tbody></table>
@@ -226,7 +230,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
           <td style="padding:10px;width:100%;vertical-align:middle">
+          <b>
             <subheading>3D Reconstruction for Surgical Environment</subheading>
+          </b>
           </td>
           </tr>
         </tbody></table>
@@ -256,10 +262,9 @@
                     <a href="https://ieeexplore.ieee.org/abstract/document/9561772">IEEE Paper</a>
                   </div>
                   <p>
-                  We utilizes a preoperative colon model segmented from CT scans together with the colonoscopic images to achieve 
+                  We utilized a preoperative colon model segmented from CT scans together with the colonoscopic images to achieve 
                   the 3D colon reconstruction, including dense depth estimation from monocular colonoscopic images using a deep 
-                  neural network, visual odometry based camera motion estimation and an embedded deformation graph based non-rigid 
-                  registration algorithm for deforming 3D scans to the segmented colon model.
+                  neural network.
                   </p>
               </td>
           </tr> <!--shuai2021icra-->
@@ -288,7 +293,7 @@
                     <a href="https://link.springer.com/chapter/10.1007/978-3-030-59719-1_64">Springer paper</a>
                   </div>
                   <p>
-                  We provides a framework that reconstructs the live 3D aortic shape by fusing a 3D static pre-operative model and 
+                  We provided a framework that reconstructed the live 3D aortic shape by fusing a 3D static pre-operative model and 
                   the 2D intra-operative fluoroscopic images. 
                   </p>
               </td>
