first version update

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <name>Boni Hu</name>
               </p>
               <p>I am now a 4th-year PhD (Sep. 2021 - ) student at <a href="https://en.nwpu.edu.cn/">Northwestern Ploytechnical
-              University</a>, affiliated with<a "href=https://gitee.com/pi-lab/pilab_research_fields"> the Pilot Intelligent 
-              Laboratory(PI-LAB)</a> and advised by Prof. <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>. Previously, 
+              University</a>, affiliated with the <a href="https://gitee.com/pi-lab/pilab_research_fields"> Pilot Intelligent 
+              Laboratory (PI-LAB)</a> and advised by Prof. <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>. Previously, 
               I obtained my M.Eng (Sep. 2018 - Mar. 2021) in Vehicle Operation Engineering from 
               <a href="https://en.nwpu.edu.cn/">Northwestern Ploytechnical University</a> and B.Eng (Sep. 2014 - Jun. 2018) in 
               Electronic and Information Engineering from <a href="https://en.nwsuaf.edu.cn/">Northwestern A&F University</a>.
