--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <a>Lin Chen</a>,
                   <a href="https://www.rjchen.site/">Runjian Chen</a>,
                   <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>,
-                  <a>Pengcheng Han</a>
+                  <a>Pengcheng Han</a>,
                   <a>Haowei Li</a>
                   <br>
                   <em>IEEE Transactions on Geoscience and Remote Sensing, 2024</em>
@@ -160,10 +160,10 @@
                   </a>
                   <br>
                   <a>Yu Zhang<a>,
-		  <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>
+                  <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>,
                   <strong>Boni Hu</strong>,
-                  <a>Pengcheng Han</a>
-                  <a>Lean Weng</a>
+                  <a>Pengcheng Han</a>,
+                  <a>Lean Weng</a>,
                   <a>Shaocheng Xue</a>
                   <br>
                   <em>IEEE Transactions on Geoscience and Remote Sensing, 2023</em>
@@ -176,6 +176,39 @@
                   </p>
               </td>
           </tr> <!--yu2024tgrs-->
+          
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+              <td style="padding:20px;width:35%;vertical-align:middle">
+                  <img src='images/nrsb2023.png' width="250"></div>
+                      </td>
+              <td width="75%" valign="middle">
+                  <p>
+                  <a href="https://www.ygxb.ac.cn/zh/article/doi/10.11834/jrs.20232597/">
+                      <papertitle>Real-time dense point cloud generation and digital model construction of surface environment based on UAV platform</papertitle>
+                  </a>
+                  <br>
+                  <strong>Boni Hu</strong>,
+                  <a>Lin Chen</a>,
+                  <a>Bingli Xu</a>,
+                  <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>,
+                  <a>Pengcheng Han</a>,
+                  <a>Li Kun</a>,
+                  <a>Zhenyu Xia</a>,
+                  <a>Ni Li</a>,
+                  <a>Ke Li</a>,
+                  <a>Xuefeng Cao</a>,
+                  <a>Gang Wan</a>                                                      
+                  <br>
+                  <em>National Remote Sensing Bulletin, 2023</em>
+                  <br>
+                  <a href="https://www.ygxb.ac.cn/zh/article/doi/10.11834/jrs.20232597/">paper</a>
+                  <p>
+                  Our proposed geolocalization method is utilized for dense point cloud generation and digital model construction 
+                  to survey washed-out and sediment areas, determining their location and extent accurately.
+                  </p>
+              </td>
+          </tr> <!--boni2024nrsb-->
           
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -199,10 +232,10 @@
                   <a>Lean Weng<a>,
                   <a>Wengqing Wang<a>,
                   <strong>Boni Hu</strong>,
-                  <a>Pengcheng Han</a>
-                  <a>Shaocheng Xue</a>
-                  <a>Yu Zhang</a>
-                  <a>Haowei Li</a>
+                  <a>Pengcheng Han</a>,
+                  <a>Shaocheng Xue</a>,
+                  <a>Yu Zhang</a>,
+                  <a>Haowei Li</a>,
                   <a>Jie Jin</a>
                   <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>
                   <br>
