--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   <a>Bingli Xu</a>,
                   <a href="http://www.adv-ci.com/blog/about-me/">Shuhui Bu</a>,
                   <a>Pengcheng Han</a>,
-                  <a>Li Kun</a>,
+                  <a>Kun Li</a>,
                   <a>Zhenyu Xia</a>,
                   <a>Ni Li</a>,
                   <a>Ke Li</a>,
