--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </p>
               <p style="text-align:center">
                 <a href="mailto:huboni@mail.nwpu.edu.cn">Email</a> &nbsp/&nbsp
-                <a href="data/CV_BoniHu.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/resume.pdf">CV</a> &nbsp/&nbsp
                 <a href="https://scholar.google.com/citations?user=23gBwAkAAAAJ&hl=en&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://github.com/boni-hu">Github</a> &nbsp/&nbsp
                 <a href="https://x.com/boni_huuu">Twitter</a>
